<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ne"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="162dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/dice_logo"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Dice_Co"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/com_Dice"
                        app:srcCompat="@drawable/dice2" />

                    <ImageView
                        android:id="@+id/Dice_Pl"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/player_Dice"
                        app:srcCompat="@drawable/dice3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Computer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="50dp"
                        android:background="#2802FF"
                        android:contentDescription="@string/desc_com"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:text="@string/desc_com"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="91dp"
                        android:layout_marginBottom="59dp"
                        android:background="#2802FF"
                        android:contentDescription="@string/desc_pl"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:text="@string/desc_pl"
                        android:textSize="30sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/higher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:contentDescription="@string/higher_button"
                    android:text="@string/higher_button"
                    android:textSize="20sp"
                    app:backgroundTint="#9C6A1B9A" />

                <Button
                    android:id="@+id/lower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:contentDescription="@string/lower_button"
                    android:text="@string/lower_button"
                    android:textSize="20sp"
                    app:backgroundTint="#9C6A1B9A" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/Dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/result"
            android:visibility="gone"
            app:srcCompat="@drawable/computer" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>